--- a/pod-web/src/components/Header/header.module.css
+++ b/pod-web/src/components/Header/header.module.css
@@ -1,30 +1,62 @@
 .appHeader {
-  background-color: #282c34;
+  width: 100%;
+  background-color: var(--color5);
   height: 63px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   color: white;
   padding: 0 35px;
+  box-sizing: border-box;
 }
+
+.appHeader .brand {
+  font-size: 14pt;
+  font-family: "Lucida Console", Monaco, monospace;
+}
+
 .appHeader nav {
-	width: 100%;
-	display: flex;
+  width: 160px;
+  display: flex;
 }
 
 .navItem {
-	font-size: 14pt;
+  position: relative;
+  font-size: 14pt;
   cursor: pointer;
   outline: 0;
 }
 
-.navItem:hover, .navItem:focus, .navItem:active {
+.navItem:hover,
+.navItem:focus,
+.navItem:active {
   outline: 0;
 }
 
 .navActive {
-  text-decoration: underline;
+  position: relative;
+}
+
+.navActive:after{
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 30px;
+  animation: underline .5s;
+  animation-fill-mode: forwards;
+  border-bottom: 1px solid #fff;
 }
 
 .navItem + .navItem {
-	margin-left: 14px;
+  margin-left: 35px;
+}
+
+@keyframes underline {
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: 100%;
+  }
 }
