--- a/pod-web/src/index.css
+++ b/pod-web/src/index.css
@@ -22,3 +22,55 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input{
+  height: 40px;
+  margin-top: 7px;
+  margin-bottom: 7px;
+  font-size: 14pt;
+  padding: 0 14px;
+  border: 0;
+  border-radius: 7px;
+}
+
+button {
+  width: 140px;
+  height: 35px;
+  background: var(--color4);
+  color: var(--color3);
+  border: none;
+  font-size: 14pt;
+  margin-top: 7px;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: var(--color5);
+}
+
+fieldset {
+  position: relative;
+  padding: 42px 0;
+  background-color: #ffffff99;
+  border-radius: 7px;
+  border: 6px solid white;
+}
+
+fieldset legend {
+  font-size: 18pt;
+  margin: 0 12pt;
+  padding: 2px 16px;
+  color: black;
+  background-color: #ffffff;
+  border-radius: 7px;
+  border-top: 1px solid white;
+}
+
+li {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  line-height: 1.5em;
+  font-size: 12pt;
+}
